# src/Application/Leads/Commands/CreateLead/CreateLeadCommandValidator.cs
@@ -45,5 +45,12 @@ public sealed class CreateLeadCommandValidator : AbstractValidator<CreateLeadCom
             .NotEmpty()
             .MaximumLength(100)
             .When(x => x.DatosCalculoObra is not null);
+
+        RuleFor(x => x.ServicioDeInteres)
+            .IsInEnum()
+            .When(x => x.ServicioDeInteres.HasValue);
+
+        RuleFor(x => x.Mensaje)
+            .MaximumLength(1000);
     }
 }
